# motrix-app

./: .gitignore  DEVELOPMENT.md  README-CN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: aria2.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  menu.rs  power.rs  tray.rs  upnp.rs
src-vue/: App.vue  main.ts
src-vue/components/: AddTaskDialog.vue  DragDrop.vue  Sidebar.vue  Speedometer.vue  TaskActivity.vue  TaskBitfield.vue  TaskDetail.vue  TaskFiles.vue  TaskItem.vue  TaskPeers.vue  TaskToolbar.vue  TaskTrackers.vue  TitleBar.vue
src-vue/composables/: useAria2Events.ts  useTheme.ts  useUpdater.ts
src-vue/locales/: en.ts  zh-CN.ts
src-vue/router/: index.ts
src-vue/stores/: app.ts  index.ts  task.ts
src-vue/styles/: index.scss
src-vue/types/: components.d.ts  index.ts
src-vue/utils/: index.ts
src-vue/views/: About.vue  Settings.vue  Tasks.vue
